# fast-deepsparse-server

./: .gitignore  Containerfile  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: ci.yaml
tools/: download.py
